# RiverLakeNetwork

./: README.md  pyproject.toml
code/HydroLakes_HDMA/: HydroLakes_HDMA.ipynb  HydroLakes_HDMA_Config.yaml  HydroLakes_HDMA_HydroLakesCorrection.py  README.md
code/HydroLakes_MERITBasins/: Config.yaml  GeneralFunctions.py  HydroLakesCorrection.py  HydroLakes_MERITBasins.ipynb  HydroLakes_MERITBasins_Config.yaml  HydroLakes_MERITBasins_HydroLakesCorrection.py  README.md  requirements.txt
code/Plots/: Figure_1.ipynb  Untitled.ipynb
env/: CreateRiverLakeEnv.sh  README.md
examples/: Example01_MERITBasins.ipynb  Example01_MERITBasinsHydroLAKES.ipynb  Example01_MERITDerivedHydroLAKES.ipynb  Example01_MERIT_Basins-Copy1.ipynb  Example01_MERIT_Basins.ipynb  Example02_HDMAHydroLAKES.ipynb  Example03_MERITBasinsHydroLAKES.ipynb  Example03_MERITDerivedHydroLAKES.ipynb
examples/Plots/: Figure_1.ipynb  Figure_2.ipynb  Untitled.ipynb
examples/extras/: Example04_MERITDerivedHydroLAKES.ipynb
examples/preparation/: MERITDerivedHydroLAKES_SK.ipynb
examples/preparation/assets/: basins_final_SK.dbf  basins_final_SK.shx  rivers_final_SK.dbf  rivers_final_SK.shx
src/riverlakenetwork/: __init__.py  burn_lake.py  burn_lakes.py  data_checker.py  data_loader.py  input_checker.py  network_correction.py  output_checker.py  resolvable_lake_identifier.py  utility.py
